<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_smscontact">AddSMSContactActivity</string>
    <string name="title_activity_btdevice_list">BTDeviceListActivity</string>
	<string name="cb_go">O</string>
    <string name="cb_ct1">1</string>
    <string name="cb_ct2">2</string>
    <string name="cb_ct3">3</string>
    <string name="cb_ct4">4</string>
    <string name="cb_ct5">5</string>

</resources>
