<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thesis.test.MainActivity" >

    <Button
        android:id="@+id/pingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/isEnd"
        android:text="Ping" />

    <ListView
        android:id="@+id/resultLV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pingBtn"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/clearBtn2"
        android:stackFromBottom="false" >
    </ListView>

    <!-- CheckBox here -->

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkbox_go"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/cb_go"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/checkbox_ct1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/cb_ct1"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/checkbox_ct2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/cb_ct2"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/checkbox_ct3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/cb_ct3"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/checkbox_ct4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/cb_ct4"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/checkbox_ct5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/cb_ct5"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/clearBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="Clear" />

    <EditText
        android:id="@+id/filenameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/clearBtn2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/clearBtn2"
        android:ems="10"
        android:hint="A-10b-B-75w-C" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/isStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pingBtn"
        android:layout_alignParentLeft="true"
        android:text="Sender" 
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/isEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pingBtn"
        android:layout_toRightOf="@+id/isStart"
        android:text="Receiver" 
        android:onClick="onCheckboxClicked"/>

</RelativeLayout>